--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch './**/*.ts' --exec 'node --loader ts-node/esm ./src/index.ts'"
+    "dev": "nodemon --watch './**/*.ts' --exec 'node --loader ts-node/esm ./src/index.ts'",
+    "seed": "npx ts-node-esm prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
