--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch './**/*.ts' --exec 'node --loader ts-node/esm ./src/index.ts'",
+    "dev": "nodemon --exec ts-node-esm src/index.ts",
     "seed": "npx ts-node-esm prisma/seed.ts"
   },
   "keywords": [],
@@ -15,12 +15,18 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "googleapis": "^110.0.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "query-string": "^8.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth20": "^2.0.11",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
