--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googleapis": "^110.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
-    "query-string": "^8.1.0"
+    "query-string": "^8.1.0",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
