--- a/package.json
+++ b/package.json
@@ -17,18 +17,12 @@
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "googleapis": "^110.0.0",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "query-string": "^8.1.0",
-    "querystring": "^0.2.1"
+    "query-string": "^8.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
-    "@types/passport": "^1.0.11",
-    "@types/passport-google-oauth20": "^2.0.11",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
