--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@prisma/client": "^4.9.0",
     "axios": "^1.3.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "query-string": "^8.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
