--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --exec ts-node-esm src/index.ts",
-    "seed": "npx ts-node-esm prisma/seed.ts"
+    "seed": "npx ts-node-esm prisma/seed.ts",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --verbose --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -25,8 +26,11 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
