--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "ES2020",
     "sourceMap": true,
     "outDir": "dist",
-    "experimentalDecorators": true
+    "esModuleInterop": true
   },
   "include": ["src/**/*"]
 }
