--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "query-string": "^8.1.0"
+    "query-string": "^8.1.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
