--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "query-string": "^8.1.0",
     "zod": "^3.20.6"
   },
@@ -26,6 +27,7 @@
     "@faker-js/faker": "^7.6.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.16",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
     "nodemon": "^2.0.20",
