--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "multer": "^1.4.5-lts.1",
     "query-string": "^8.1.0",
     "zod": "^3.20.6"
