--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "eslint": "^8.34.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "puppeteer": "^19.6.3",
