--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,24 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": "standard-with-typescript",
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": "./tsconfig.json"
-    },
-    "rules": {
-        "quotes": ["error", "single"]
-    }
+  "env": {
+    // "browser": true,
+    "node": true,
+    "es2020": true,
+    "sourceType": "module"
+  },
+  "extends": ["standard-with-typescript", "prettier"],
+  "parser": "@typescript-eslint/parser",
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "project": "./tsconfig.json"
+  },
+  "rules": {
+    "no-useless-constructor": "off",
+    "no-unused-vars": "error",
+    "@typescript-eslint/no-useless-constructor": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/naming-convention": 1
+  }
 }
