--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,15 @@
-**
+.vscode
+coverage
+dist
+node_modules
+prisma
+storage
+.env
+.eslintrc.json
+.gitignore
+jest.config.ts
+package-lock.json
+package.json
+tsconfig.json
+.prettierrc.json
+```
