--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.4",
     "prisma": "^4.9.0",
     "puppeteer": "^19.6.3",
     "supertest": "^6.3.3",
