--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^4.9.0",
     "axios": "^1.3.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.16",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
